<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="8dp">

    <ImageView
        android:id="@+id/appIconIV"
        android:src="@drawable/cenolaholmes"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/aNametxt"
        android:text="Enola Holmes"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/appIconIV"
        android:layout_toEndOf="@+id/appIconIV"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/aVersiontxt"
        android:text="Adventure,drama"
        android:textSize="14sp"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aNametxt"
        android:layout_alignLeft="@+id/aNametxt"
        android:layout_alignStart="@+id/aNametxt" />

</RelativeLayout>